tooling/nargo_cli/tests/snapshots/execution_success/regression_8874/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(print: bool, i: u32) {
    let array: [u32; 0] = [];
    if print {
        println(array[i]);
    }
}
